[package]
name = "wasm_vault"
version = "0.1.0"
authors = ["Palingram <codemuhammed@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "3.0.2"
cosmwasm-std = { version = "3.0.2", features = [
  # Enable this if you only deploy to chains that have CosmWasm 3.0 or higher
  "cosmwasm_3_0",
] }
cw-storage-plus = "3.0.1"
cw2 = "3.0.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.17" }

[dev-dependencies]
cw-multi-test = { version = "3.0.1", features = ["staking", "cosmwasm_3_0"] }
